src/test/resources/model_test/valid/FourEntities_model/Employee.entity
Employee {
//	id : integer { @Id , @NotNull }; // the id
	id : int { @Id,  @NotNull }; // the id
	poste : string [ 4 ] { @NotNull };
}
