src/test/resources/model_test/invalid/FourEntities_model/Employee.entity
Employee {
	id : int { @Id , @NotNull }; // the id
	poste : string [ 4 ] { @NotNull };
}
